findbugs: make sure use UTF-8 encoding
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@50123 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e